metadata/unpackaged/objects/OLIS__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Id__c</fullName>
        <label>OLI Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OLIS</relationshipLabel>
        <relationshipName>OLIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OLIS</relationshipLabel>
        <relationshipName>OLIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Calculate_Installment_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Calculate Installment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Divide Amount into multiple installments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Amount for each installment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Product_Margin__c</fullName>
        <label>Total Product Margin</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OLIS</label>
    <nameField>
        <label>OLIS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>